k8s-example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-demo
  name: app-demo-deploy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-demo
  template:
    metadata:
      labels:
        app: app-demo
        name: app-demo-pod
    spec:
      containers:
        - env:
            - name: PORT
              value: '3000'
            - name: MIN
              value: '35'
            - name: MAX
              value: '50'
          image: 'nginx:latest'
          imagePullPolicy: Always
          name: app-demo
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 200m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 100Mi
