k8s-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-demo
  name: app-demo-svc
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    name: app-demo-pod
  type: ClusterIP
